--- a/main.ipynb
+++ b/main.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,19 +37,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "def greater(a,b):\n",
-    "#your code here"
+    "    if a>b:\n",
+    "        return a\n",
+    "    if a<b:\n",
+    "        return b\n",
+    "    else:\n",
+    "        return 'The numbers are equal'\n",
+    "\n",
+    "print(greater(4,2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....................................................................................................\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 100 tests in 0.037s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
     "test_greater(greater)"
@@ -73,18 +100,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#your code here"
+    "def greatest(lst):\n",
+    "    max_element = 0\n",
+    "    for i in lst:\n",
+    "        if i > max_element:\n",
+    "            max_element = i\n",
+    "    return max_element\n",
+    "\n",
+    "a=[1,2,3,4,5,6,7,7,8]\n",
+    "greatest(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....................................................................................................\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 100 tests in 0.037s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
     "test_greatest(greatest)"
@@ -99,21 +157,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def sum_all(lst):\n",
-    "#your code here"
+    "    sum=0\n",
+    "    for i in lst:\n",
+    "        sum+=i\n",
+    "    return sum\n",
+    "\n",
+    "a=[1,2,3]\n",
+    "sum_all(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....................................................................................................\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 100 tests in 0.039s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
     "test_sum(sum_all)"
@@ -128,21 +215,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def mult_all(lst):\n",
-    "#your code here"
+    "    multiple=1\n",
+    "    for i in lst:\n",
+    "        multiple*=i\n",
+    "    return multiple\n",
+    "\n",
+    "a=[1,2,3]\n",
+    "mult_all(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....................................................................................................\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 100 tests in 0.050s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
     "test_mult(mult_all)"
@@ -157,19 +273,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Enter a valid operator'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def oper_all(arr, oper = \"*\"):\n",
-    "#your code here"
+    "     if oper == \"*\":\n",
+    "         multiple=1\n",
+    "         for i in arr:\n",
+    "            multiple*=i\n",
+    "         return multiple\n",
+    "     if oper == \"+\":\n",
+    "         sum=0\n",
+    "         for i in arr:\n",
+    "            sum+=i\n",
+    "         return sum\n",
+    "     else:\n",
+    "         return \"Enter a valid operator\"\n",
+    "\n",
+    "a=[1,2,3,4]\n",
+    "oper_all(a, \"+\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....................................................................................................\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 100 tests in 0.040s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
     "test_operations(oper_all)"
@@ -184,12 +337,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def factorial(n):\n",
-    "#your code here"
+    "    factorial = 1\n",
+    "    for i in range (1,n+1):\n",
+    "        factorial *=i\n",
+    "    return factorial\n",
+    "\n",
+    "a=3\n",
+    "factorial(a)"
    ]
   },
   {
@@ -213,9 +383,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....................................................................................................\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 100 tests in 0.035s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
     "test_factorial(factorial)"
@@ -232,19 +414,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def unique(lst_un):\n",
-    "#your code here"
+    "    lst_output=[]\n",
+    "    for i in lst_un:\n",
+    "        if i not in lst_output:\n",
+    "            lst_output.append(i)\n",
+    "    return lst_output\n",
+    "\n",
+    "        \n",
+    "a=[1,2,3,4,5,6,7,7,8]\n",
+    "unique(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....................................................................................................\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 100 tests in 0.087s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
     "test_unique(unique)"
@@ -260,19 +473,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def mode_counter(arr):\n",
-    "#your code here"
+    "    frequency={}\n",
+    "    for i in arr:\n",
+    "        if i in frequency:\n",
+    "            frequency[i]+=1\n",
+    "        else:\n",
+    "            frequency[i]=1\n",
+    "\n",
+    "    max = 0\n",
+    "    mode = 0\n",
+    "    for i, count in frequency.items():\n",
+    "        if count > max:\n",
+    "            max = count\n",
+    "            mode = i\n",
+    "    \n",
+    "    return mode\n",
+    "\n",
+    "a=[1,2,3,4,5,6,7,7,8]\n",
+    "mode_counter(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....................................................................................................\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 100 tests in 0.041s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
     "test_mode(mode_counter)"
@@ -288,19 +541,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.4381231397212986"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def st_dev(list_sd):\n",
-    "#your code here"
+    "    \n",
+    "    mean = sum(list_sd)/len(list_sd)\n",
+    "    sum_of_diff=0\n",
+    "    \n",
+    "    for i in list_sd:\n",
+    "        sum_of_diff += (i-mean)**2\n",
+    "\n",
+    "    stdev = (sum_of_diff/(len(list_sd)-1))**(0.5)\n",
+    "    return stdev\n",
+    "\n",
+    "a=[1,2,3,4,5,6,7,7,8]\n",
+    "st_dev(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....................................................................................................\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 100 tests in 0.039s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
     "test_stdev(st_dev)"
@@ -318,16 +605,63 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def pangram(string):\n",
-    "#your code here"
+    "    alphabet = 'abcdefghijklmnopqrstuvwxyz'\n",
+    "\n",
+    "    string = string.lower()\n",
+    "    \n",
+    "    letter_count = {letter: 0 for letter in alphabet}\n",
+    "    for i in alphabet:\n",
+    "        if i in string:\n",
+    "            letter_count[i]+=1 \n",
+    "        else:\n",
+    "            letter_count[i]=0\n",
+    "\n",
+    "    for value in letter_count.values():\n",
+    "        if value == 0:\n",
+    "            return False\n",
+    "    \n",
+    "    return True\n",
+    "\n",
+    "pangram('a,b,c,d,e,f,g,h,i,j,k,l,m,n,o,p,q,r,s,t,u,v,w,x,y,z,6')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "..............................\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 30 tests in 0.010s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
     "test_pangram(pangram)"
@@ -344,19 +678,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'are,hello,how,you'"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def sort_alpha(string):\n",
-    "#your code here"
+    "    list_of_words=string.split(\",\")\n",
+    "    sorted_list=[]\n",
+    "    sorted_list = sorted(list_of_words)\n",
+    "    new_string = ''\n",
+    "    for i in sorted_list:\n",
+    "        new_string +=i \n",
+    "        new_string +=','\n",
+    "        \n",
+    "    new_string = new_string[:-1]\n",
+    "    return new_string\n",
+    "    \n",
+    "\n",
+    "a='hello,how,are,you'\n",
+    "sort_alpha(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....................................................................................................\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 100 tests in 0.038s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
     "test_alpha(sort_alpha)"
@@ -371,12 +741,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def check_pass(password):\n",
-    "#your code here"
+    "    if len(password) < 8:\n",
+    "        return False\n",
+    "      \n",
+    "    has_lower = False\n",
+    "    has_upper = False\n",
+    "    has_digit = False\n",
+    "    has_special = False\n",
+    "\n",
+    "    for char in password:\n",
+    "        if char.islower():\n",
+    "            has_lower = True\n",
+    "        elif char.isupper():\n",
+    "            has_upper = True\n",
+    "        elif char.isdigit():\n",
+    "            has_digit = True\n",
+    "        elif char in '!@#$%^&*()-+':\n",
+    "            has_special = True\n",
+    "\n",
+    "    if has_lower == True and has_upper == True and has_digit == True and has_special == True:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "password_check='12345Yy0'\n",
+    "check_pass(password_check)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".................................................................................................F..\n",
+      "======================================================================\n",
+      "FAIL: runTest (mod.testing.test_pass.<locals>.TestKnown.runTest)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\natal\\Lab Day 2\\lab-functions-en\\mod\\testing.py\", line 202, in runTest\n",
+      "    self.assertEqual(fn(self.input), self.output, f\"Should be {self.output}\")\n",
+      "AssertionError: False != True : Should be True\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 100 tests in 0.034s\n",
+      "\n",
+      "FAILED (failures=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This will test your function \n",
+    "test_pass(check_pass)"
    ]
   },
   {
@@ -384,10 +819,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# This will test your function \n",
-    "test_pass(check_pass)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -406,7 +838,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.7"
   },
   "vscode": {
    "interpreter": {
